# abvio

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  python-package.yml
docs/: cli.md  format.md  incar.md  index.md  jobs.md  poscar.md  quickstart.md
docs/api/: cli.md  io.md  kpoints.md  structure.md
docs/examples/: magnetism.md
format/: index.html
jobs/: index.html
quickstart/: index.html
search/: search_index.json
src/abvio/: aio.py  check.py  cli.py  incar.py  io.py  kpoints.py  scheduler.py  structure.py  submit.py  validate.py
src/abvio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/abvio/reference/: incar.yaml
tests/: .coverage  test_check.py  test_incar.py  test_io.py  test_job.py  test_kpoints.py  test_scheduler.py  test_structure.py
tests/files/: automatic_linemode.yaml  invalid.yaml  lattice_array.yaml  lattice_list.yaml  magmom_index.yaml  magmom_noncollinear_index.yaml  magmom_noncollinear_range.yaml  magmom_noncollinear_species.yaml  magmom_range.yaml  magmom_species.yaml  prototype_fluorite.yaml  prototype_perovskite.yaml  valid.yaml
tests/structures/: CaF2.vasp  CaTiO3.vasp
tests/vaspsets/band/: INCAR  KPOINTS  POSCAR  equivalent.yaml
tests/vaspsets/fluorite/: INCAR  equivalent.yaml
tests/vaspsets/perovskite/: INCAR  KPOINTS  equivalent.yaml  equivalent_pbs.yaml
tests/vaspsets/remote/: INCAR  POSCAR  equivalent.yaml
