[project]
name = "abvio"
version = "0.0.1"
description = "A Python package to simplify VASP input files"
authors = [
    { name="William Laderer", email="wtladerer@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Materials Science",
]

dependencies = [
    "numpy<2",
    "pymatgen",
    "mp_api",
    "pydantic",
]